--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
     "three": "^0.160.1"
   },
   "devDependencies": {
