--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.160.1"
   },
   "devDependencies": {
