--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
     "zod": "3.25.76",
     "@eslint/js": "9.38.0",
     "globals": "16.4.0",
@@ -71,8 +70,7 @@
     "three": "0.180.0",
     "@supabase/supabase-js": "2.76.0",
     "vite": "7.1.11",
-    "@vitejs/plugin-react": "5.0.4",
-    "path": "0.12.7"
+    "@vitejs/plugin-react": "5.0.4"
   },
   "devDependencies": {
     "@types/node": "^22",
