--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-
+    "@eslint/js": "9.38.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -33,44 +32,47 @@
     "@radix-ui/react-select": "2.1.4",
     "@radix-ui/react-separator": "1.1.1",
     "@radix-ui/react-slider": "1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "1.1.2",
     "@radix-ui/react-tabs": "1.1.2",
     "@radix-ui/react-toast": "1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "2.76.0",
     "@vercel/analytics": "1.3.1",
+    "@vitejs/plugin-react": "5.0.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "eslint-plugin-react-hooks": "7.0.0",
+    "eslint-plugin-react-refresh": "0.4.24",
+    "globals": "16.4.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "12.23.24",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^16.1.4",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "7.9.4",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "3.25.76",
-    "@eslint/js": "9.38.0",
-    "globals": "16.4.0",
-    "eslint-plugin-react-hooks": "7.0.0",
-    "eslint-plugin-react-refresh": "0.4.24",
-    "typescript-eslint": "8.46.2",
-    "react-router-dom": "7.9.4",
-    "motion": "12.23.24",
     "three": "0.180.0",
-    "@supabase/supabase-js": "2.76.0",
+    "typescript-eslint": "8.46.2",
     "vite": "7.1.11",
-    "@vitejs/plugin-react": "5.0.4"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@types/node": "^22",
